--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Hello Ezzahra</h1>
     <h2>hi is oussama</h2>
     <p>brabi i5dim partie js</p>
+    <p>okay wenti rak7i Css</p>
   </body>
 </html>
